Make neutral shadow decisions evidence-complete
Propagate finite predecessor candidate domains and preserve immutable consulted, required, and missing shape facts so unknown metadata is excluded only from actual rule proof requirements.

Constraint: planner output and runtime behavior remain untouched

Rejected: universal five-type input domains | they conflate local/scalar inputs and grow independently of predecessor candidates

Confidence: medium

Scope-risk: moderate

Directive: keep bounded legal-assignment enumeration out of production graph comparisons

Tested: mvn test-compile; 55 focused oracle/facade/comparator tests; git diff --check; static scans

Not-tested: task-9 B-20 exhaustive assignment misuse remains held by leader